# dem

./: .gitignore  Cargo.toml  README.md  flake.nix  generate_dem_http.nix.sh  generate_dem_http.sh  http.patch
dem-client/: .gitignore  Cargo.toml  index.html  openapi.json
dem-client/src/: drawer_content.rs  emoji_list.rs  error.rs  main.rs  query.rs  style.rs  theme.rs
dem-server/: Cargo.toml
dem-server/src/: api.rs  auth.rs  discord.rs  image.rs  main.rs  retry_middleware.rs
dem-types/: Cargo.toml
dem-types/src/: api.rs  discord.rs  error.rs  lib.rs
