[package]
name = "dem-client"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = {version = "^1.0", features = ["derive"]}
serde_json = "^1.0"
dem-http = {path = "../dem-http"}
wasm-bindgen-futures = "0.4.32"
weblog = "0.3.0"
material-yew = { version = "0.2.0", features = ["full"], git = "https://github.com/Maix0/material-yew" }
wasm-bindgen = "0.2.82"
gloo-utils = "0.1.4"
yew-router = { git = "https://github.com/yewstack/yew" }
yew = { git = "https://github.com/yewstack/yew", features= [ "csr" ]  }
yew-hooks = { git = "https://github.com/jetli/yew-hooks/", version = "0.1.56" }
stylist = { version = "0.11.0", features = ["yew_integration"], git = "https://github.com/maix0/stylist-rs" }
