[package]
name = "dem-server"
version = "0.1.0"
edition = "2021"

[features]
default = []
google_api_remote = []
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dashmap = { version = "5.3.4", features = ["serde"] }
dem-types = { path = "../dem-types" }
futures = "0.3.21"
futures-util = "0.3.21"
lru = "0.7.8"
once_cell = "1.13.0"
rand = "0.8.5"
reqwest = { version = "0.11.11", features = ["json", "rustls-tls"], default-features = false }
rocket = { version = "0.5.0-rc.2", features = ["json", "uuid", "secrets"] }
rocket_oauth2 = { git = "https://github.com/maix0/rocket_oauth2.git", branch = "next"}
serde = { version = "1.0.138", features = ["derive"] }
serde_json = "1.0.82"
tokio = { version = "1.19.2", features = ["full", "tracing"] }
tokio-tungstenite = { version = "0.17.2", features = ["rustls", "rustls-tls-native-roots", "connect"] }
schemars = "0.8.10"
okapi = { version = "0.7.0-rc.1" }
rocket_okapi = { version = "0.8.0-rc.2", features = ["swagger"] }
rocket_db_pools = { version = "0.1.0-rc.2", features = ["deadpool_redis"] }
reqwest-middleware = "0.1.6"
anyhow = "1.0.60"
task-local-extensions = "0.1.1"
base64 = "0.13.0"
uuid = { version = "1.1.2", features = ["v4", "fast-rng"] }
tokio-stream = { version = "0.1.9", features = ["fs"] }
fxhash = "0.2.1"

